--- a/DemoApp/DemoApp.csproj
+++ b/DemoApp/DemoApp.csproj
@@ -11,8 +11,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="Xamarin.CommunityToolkit" Version="1.3.0" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Resources\" />
@@ -22,6 +23,8 @@
     <None Remove="Resources\Images\thuonghieugogihouse.png" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="ViewModels\" />
+    <Folder Include="Views\" />
     <Folder Include="Resources\" />
     <Folder Include="Resources\Images\" />
     <Folder Include="Common\" />
