--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-DemoApp/DemoApp/obj
-DemoApp/DemoApp/bin
-DemoApp/DemoApp.iOS/obj
-DemoApp/DemoApp.iOS/bin
-DemoApp/DemoApp.Anroid/obj
-DemoApp/DemoApp.Android/bin
+DemoApp/obj/
+DemoApp/bin/
+DemoApp.iOS/obj/
+DemoApp.iOS/bin/
+DemoApp.Anroid/obj/
+DemoApp.Android/bin/
 .vs/DemoApp/v16/.suo
+DemoApp.Android/obj/
