--- a/DemoApp/DemoApp.csproj
+++ b/DemoApp/DemoApp.csproj
@@ -9,15 +9,22 @@
     <DebugType>portable</DebugType>
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
+
   <ItemGroup>
-    <Folder Include="Resources\" />
-    <Folder Include="Resources\Images\" />
-    <Folder Include="Common\" />
-    <Folder Include="Common\MarkupExtension\" />
+    <None Remove="Resources\Fonts\fa-duotone-900.ttf" />
+    <None Remove="Resources\Fonts\fa-light-300.ttf" />
+    <None Remove="Resources\Fonts\fa-regular-400.ttf" />
+    <None Remove="Resources\Fonts\fa-solid-900.ttf" />
+  </ItemGroup>
+  <ItemGroup>
     <Folder Include="Views\" />
     <Folder Include="Views\Popup\" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Resources\Fonts\fa-duotone-900.ttf" />
+    <EmbeddedResource Include="Resources\Fonts\fa-light-300.ttf" />
+    <EmbeddedResource Include="Resources\Fonts\fa-regular-400.ttf" />
+    <EmbeddedResource Include="Resources\Fonts\fa-solid-900.ttf" />
     <EmbeddedResource Include="Resources\Images\thuonghieugogihouse.png" />
   </ItemGroup>
   <ItemGroup>
@@ -26,5 +33,10 @@
     <PackageReference Include="Xamarin.CommunityToolkit.Markup" Version="1.3.0" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Controls\StepperControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
