--- a/DemoApp/DemoApp.csproj
+++ b/DemoApp/DemoApp.csproj
@@ -29,6 +29,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Rg.Plugins.Popup" Version="2.0.0.14" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
     <PackageReference Include="Xamarin.CommunityToolkit" Version="1.3.0" />
     <PackageReference Include="Xamarin.CommunityToolkit.Markup" Version="1.3.0" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
