--- a/DemoApp/DemoApp - Backup.csproj
+++ b/DemoApp/DemoApp - Backup.csproj
@@ -15,9 +15,9 @@
     <None Remove="Resources\Fonts\fa-light-300.ttf" />
     <None Remove="Resources\Fonts\fa-regular-400.ttf" />
     <None Remove="Resources\Fonts\fa-solid-900.ttf" />
+    <None Remove="sqlite-net-pcl" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Common\DataBusiness\" />
     <Folder Include="Views\" />
     <Folder Include="Views\Popup\" />
   </ItemGroup>
@@ -35,6 +35,7 @@
     <PackageReference Include="Xamarin.CommunityToolkit.Markup" Version="1.3.0" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Update="Controls\StepperControl.xaml">
