--- a/DemoApp.iOS/DemoApp.iOS.csproj
+++ b/DemoApp.iOS/DemoApp.iOS.csproj
@@ -68,6 +68,7 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ControlsRenderer\CTEntryRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -141,5 +142,8 @@
       <Project>{B0AAFF3F-CF94-4C54-9C54-196BF64AB0B4}</Project>
       <Name>DemoApp</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ControlsRenderer\" />
   </ItemGroup>
 </Project>
