--- a/DemoApp.iOS/DemoApp.iOS.csproj
+++ b/DemoApp.iOS/DemoApp.iOS.csproj
@@ -69,6 +69,7 @@
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ControlsRenderer\CTEntryRenderer.cs" />
+    <Compile Include="ControlsRenderer\CTEditorRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
