--- a/DemoApp.iOS/DemoApp.iOS.csproj
+++ b/DemoApp.iOS/DemoApp.iOS.csproj
@@ -70,6 +70,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ControlsRenderer\CTEntryRenderer.cs" />
     <Compile Include="ControlsRenderer\CTEditorRenderer.cs" />
+    <Compile Include="ControlsRenderer\FrameCornerRadiusRenderer.cs" />
+    <Compile Include="Service\TransitionNavigationPageRenderer.cs" />
+    <Compile Include="ControlsRenderer\RoundCornersEffectDroid.cs" />
+    <Compile Include="Service\DeviceStatusBar.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -125,16 +129,22 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2291" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
     <PackageReference Include="Rg.Plugins.Popup">
       <Version>2.0.0.14</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.CommunityToolkit">
-      <Version>1.3.0</Version>
+      <Version>1.3.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.CommunityToolkit.Markup">
-      <Version>1.3.0</Version>
+      <Version>1.3.1</Version>
+    </PackageReference>
+    <PackageReference Include="Plugin.NFC">
+      <Version>0.1.20</Version>
+    </PackageReference>
+    <PackageReference Include="ZXing.Net.MobileX.Forms">
+      <Version>3.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
@@ -146,5 +156,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ControlsRenderer\" />
+    <Folder Include="Service\" />
   </ItemGroup>
 </Project>
