--- a/DemoApp.iOS/DemoApp.iOS.csproj
+++ b/DemoApp.iOS/DemoApp.iOS.csproj
@@ -146,6 +146,9 @@
     <PackageReference Include="ZXing.Net.MobileX.Forms">
       <Version>3.0.1</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.FFImageLoading.Forms">
+      <Version>2.4.11.982</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
