--- a/DemoApp/DemoApp.csproj
+++ b/DemoApp/DemoApp.csproj
@@ -67,6 +67,7 @@
     <None Remove="ViewModels\ListProfile\" />
     <None Remove="Models\ListProfile\" />
     <None Remove="Models\UpdateRFID\" />
+    <None Remove="Xamarin.FFImageLoading.Forms" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Fonts\fa-duotone-900.ttf" />
@@ -111,6 +112,7 @@
     <PackageReference Include="Plugin.NFC" Version="0.1.20" />
     <PackageReference Include="ZXing.Net.MobileX.Forms" Version="3.0.1" />
     <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
+    <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Views\Popup\PopupAlertCancel.xaml.cs">
